--- a/class-01-jquery-and-the-dom/pair-assignment/victor-david/index.html
+++ b/class-01-jquery-and-the-dom/pair-assignment/victor-david/index.html
@@ -41,7 +41,7 @@
       &copy; 2015 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
 
-    <!-- // TODO: Include any/all needed script tags -->
+    <!-- // DONE: Include any/all needed script tags -->
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="scripts/blogArticles.js"></script>
     <script src="scripts/article.js"></script>
