converted template html into handlebars style template and added expressions

--- a/class-04-templates/pair-assignment/starter-code/index.html
+++ b/class-04-templates/pair-assignment/starter-code/index.html
@@ -11,20 +11,20 @@
     <link rel="stylesheet" href="styles/modules.css">
 
     <!--
-      TODO: Complete this script tag to hold the Handlebars template.
+      DONE: Complete this script tag to hold the Handlebars template.
         - Be sure to give it a meaningful id attribute, and don't forget to specify the type!
         - Insert placeholder keys.
     -->
-    <script id="" type="">
-      <article class="clearfix" data-author="{{}}" data-category="{{}}">
+    <script id="blog-template" type="text/x-handlebars-template">
+      <article class="clearfix" data-author="{{author}}" data-category="{{category}}">
         <header>
-          <h1>{{}}</h1>
+          <h1>{{title}}</h1>
           <div class="byline">
-            By <address><a href="{{}}">{{}}</a></address>
-            {{}}
+            By <address><a href="{{authorUrl}}">{{author}}</a></address>
+            {{publishedOn}}
           </div>
         </header>
-        <section class="article-body">{{{}}}</section>
+        <section class="article-body">{{{body}}}</section>
         <a href="#" class="read-on">Read on &rarr;</a>
       </article>
     </script>
@@ -84,9 +84,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- DONE: Include Handlebars.JS from a CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
     <script src="scripts/blogArticles.js"></script>
     <script src="scripts/article.js"></script>
     <script src="scripts/articleView.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
   </body>
 </html>
