did part of stretch goal. used handlebars for author filter

--- a/class-04-templates/pair-assignment/starter-code/index.html
+++ b/class-04-templates/pair-assignment/starter-code/index.html
@@ -28,6 +28,14 @@
         <a href="#" class="read-on">Read on &rarr;</a>
       </article>
     </script>
+    <!--  -->
+    <script id="author-template" type="text/x-handlebars-template">
+      <option value="{{author}}">{{author}}</option>
+    </script>
+    <script id="category-template" type="text/x-handlebars-template">
+      <option value="{{category}}">{{category}}</option>
+    </script>
+    <!--  -->
   </head>
   <body>
     <header class="site-header clearfix">
