author array and numWords array complete

--- a/class-07-functional-programming/pair-assignment/starter-code/admin.html
+++ b/class-07-functional-programming/pair-assignment/starter-code/admin.html
@@ -54,6 +54,7 @@
     <script>
       // TODO: After we load our admin page, what view function do we want to run next?
       // Article.fetchAll(); // Let's pass in a callback function!
+      Article.fetchAll(articleView.initAdminPage);
     </script>
   </body>
 </html>
