changed TODO to DONE

--- a/class-07-functional-programming/pair-assignment/starter-code/admin.html
+++ b/class-07-functional-programming/pair-assignment/starter-code/admin.html
@@ -52,7 +52,7 @@
     <script src="/scripts/article.js"></script>
     <script src="/scripts/articleView.js"></script>
     <script>
-      // TODO: After we load our admin page, what view function do we want to run next?
+      // DONE: After we load our admin page, what view function do we want to run next?
       // Article.fetchAll(); // Let's pass in a callback function!
       Article.fetchAll(articleView.initAdminPage);
     </script>
