added functionality for routes file

--- a/class-11-spa-routing/pair-assignment/starter-code/index.html
+++ b/class-11-spa-routing/pair-assignment/starter-code/index.html
@@ -91,8 +91,8 @@
     <script src="scripts/aboutController.js"></script>
     <script src="server.js"></script>
     <script src="scripts/routes.js"></script>
-    <!-- TODO: These function calls inside the script tag do not look great here. Why not place them where
+    <!-- DONE: These function calls inside the script tag do not look great here. Why not place them where
         they belong, in our brand new article controller?!: -->
-    
+
   </body>
 </html>
