--- a/class-11-spa-routing/pair-assignment/starter-code/index.html
+++ b/class-11-spa-routing/pair-assignment/starter-code/index.html
@@ -79,17 +79,16 @@
     </footer>
     <!-- DONE: Be sure to include the routing functionality with the correct script files.
         Don't forget your controllers! Ensure the load order satisfies any dependencies: -->
-
     <script src="/vendor/scripts/jquery-2.1.4.js"></script>
     <script src="/vendor/scripts/handlebars.js"></script>
     <script src="/vendor/scripts/marked.js"></script>
     <script src="/vendor/scripts/html5sql.js"></script>
-    <script src="/scripts/webdb.js"></script>
+    <script src="/vendor/scripts/webdb.js"></script>
+    <script src="/vendor/scripts/page.js"></script>
     <script src="/scripts/article.js"></script>
     <script src="/scripts/articleView.js"></script>
     <script src="scripts/articleController.js"></script>
     <script src="scripts/aboutController.js"></script>
-    <script src="server.js"></script>
     <script src="scripts/routes.js"></script>
     <!-- DONE: These function calls inside the script tag do not look great here. Why not place them where
         they belong, in our brand new article controller?!: -->
