Implemented stretch goal for the admin page

--- a/class-11-spa-routing/pair-assignment/starter-code/index.html
+++ b/class-11-spa-routing/pair-assignment/starter-code/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
     <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
-
+    <script id="author-template" type="text/x-handlebars-template">
+      <li><strong>{{name}}</strong>: {{numWords}} words written</li>
+    </script>
     <script id="article-template" type="text/x-handlebars-template">
       <article class="clearfix" data-author="{{author}}" data-category="{{category}}">
         <header>
@@ -73,7 +75,18 @@
           </ul>
         </section>
       </section>
+      <section id="blog-stats" class="tab-content">
+        <h1>Blog Stats</h1>
+        <dt>Total articles:</dt> <dd class="articles"></dd>
+        <dt>Total words:</dt> <dd class="words"></dd>
+        <h2>Author Stats</h2>
+        <p><em>Details on who is writing, and how much writing they are doing...</em></p>
+        <ul class="author-stats">
+        </ul>
+      </section>
     </main>
+
+
     <footer>
       &copy; 2015 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
@@ -87,6 +100,7 @@
     <script src="/vendor/scripts/page.js"></script>
     <script src="/scripts/article.js"></script>
     <script src="/scripts/articleView.js"></script>
+    <script src="/scripts/adminController.js"></script>
     <script src="scripts/articleController.js"></script>
     <script src="scripts/aboutController.js"></script>
     <script src="scripts/routes.js"></script>
